// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when applied with "test" option matches snapshot for a single "test" value (RegExp): assets 1`] = `
{
  "test/foo-0.json": "{
  "squadName": "Super hero squad",
  "homeTown": "Metro City",
  "formed": 2016,
  "secretBase": "Super tower",
  "active": true
}
",
  "test/foo-1.json": "{"squadName":"Super hero squad","homeTown":"Metro City","formed":2016,"secretBase":"Super tower","active":true}",
  "test/foo-2.json": "{"squadName":"Super hero squad","homeTown":"Metro City","formed":2016,"secretBase":"Super tower","active":true}",
  "test/foo-3.json": "{"squadName":"Super hero squad","homeTown":"Metro City","formed":2016,"secretBase":"Super tower","active":true}",
  "test/foo-4.json": "{
  "squadName": "Super hero squad",
  "homeTown": "Metro City",
  "formed": 2016,
  "secretBase": "Super tower",
  "active": true
}
",
}
`;

exports[`when applied with "test" option matches snapshot for a single "test" value (RegExp): errors 1`] = `[]`;

exports[`when applied with "test" option matches snapshot for a single "test" value (RegExp): warnings 1`] = `[]`;

exports[`when applied with "test" option matches snapshot for multiple "test" value (RegExp): assets 1`] = `
{
  "test/foo-0.json": "{"squadName":"Super hero squad","homeTown":"Metro City","formed":2016,"secretBase":"Super tower","active":true}",
  "test/foo-1.json": "{"squadName":"Super hero squad","homeTown":"Metro City","formed":2016,"secretBase":"Super tower","active":true}",
  "test/foo-2.json": "{"squadName":"Super hero squad","homeTown":"Metro City","formed":2016,"secretBase":"Super tower","active":true}",
  "test/foo-3.json": "{
  "squadName": "Super hero squad",
  "homeTown": "Metro City",
  "formed": 2016,
  "secretBase": "Super tower",
  "active": true
}
",
  "test/foo-4.json": "{
  "squadName": "Super hero squad",
  "homeTown": "Metro City",
  "formed": 2016,
  "secretBase": "Super tower",
  "active": true
}
",
}
`;

exports[`when applied with "test" option matches snapshot for multiple "test" value (RegExp): errors 1`] = `[]`;

exports[`when applied with "test" option matches snapshot for multiple "test" value (RegExp): warnings 1`] = `[]`;

exports[`when applied with "test" option matches snapshot with empty value: assets 1`] = `
{
  "test/foo-0.json": "{"squadName":"Super hero squad","homeTown":"Metro City","formed":2016,"secretBase":"Super tower","active":true}",
  "test/foo-1.json": "{"squadName":"Super hero squad","homeTown":"Metro City","formed":2016,"secretBase":"Super tower","active":true}",
  "test/foo-2.json": "{"squadName":"Super hero squad","homeTown":"Metro City","formed":2016,"secretBase":"Super tower","active":true}",
  "test/foo-3.json": "{"squadName":"Super hero squad","homeTown":"Metro City","formed":2016,"secretBase":"Super tower","active":true}",
  "test/foo-4.json": "{"squadName":"Super hero squad","homeTown":"Metro City","formed":2016,"secretBase":"Super tower","active":true}",
}
`;

exports[`when applied with "test" option matches snapshot with empty value: errors 1`] = `[]`;

exports[`when applied with "test" option matches snapshot with empty value: warnings 1`] = `[]`;
